--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button id="SignUP-btn">Create an account</button>
 
         </div>
-
+    </div>
 
 
 
@@ -43,12 +43,16 @@
 
         </div>
     </div>
-</div>
+
 
 
     <div id="logoutContainer">
-        <h5 id="userEmail"></h5>
-        <button id="LogOut_btn">LogOut</button>
+        <div class="logoutContent">
+
+
+            <h5 id="userEmail"></h5>
+            <button id="LogOut_btn">LogOut</button>
+        </div>
     </div>
     
     
