--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <h5 id="userEmail"></h5>
             <button id="LogOut_btn">LogOut</button>
         </div>
+        <div id="uploadContent">
+            <input type="file">
+        </div>
     </div>
     
     
