about to complete

--- a/project/index.html
+++ b/project/index.html
@@ -47,12 +47,19 @@
                   type="button"
                   id="button-addon2"
                 >
-                  Button
+                  Post
                 </button>
+               
+              </div>
+              <div class="loader">
+                <div class="spinner-border text-primary loaderIcon" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+
               </div>
             </div>
             <div class="cardsContainerWrapper">
-                <div class="spinner-border text-primary" role="status">
+                <div class="spinner-border text-primary loader2" role="status">
                     <span class="visually-hidden">Loading...</span>
                   </div>
 
