worked on styling

--- a/project/login/login.html
+++ b/project/login/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="signin_container">
-        <div>
+        <div id="signin_container2">
         
             <h2>SIgnin </h2>
                 <input type="email" placeholder="Email" id="email">
